Use virtual threads for resolver planning